# ESP32

./: .gitignore  .gitmodules  partitions.csv
main/: CMakeLists.txt  Kconfig  db_display.cpp  db_display.h  db_esp32_control.c  http_server.c  http_server.h  main.c  tcp_server.c
main/html/: db.css  settings.html  success.html
